# uav_map_merger

./: README.md
experiments/: README.md
experiments/graphing_functions_with_experimental_data/: forest_plot_accept_idx.py  forest_plot_fitness.py  plot_accept_idx_center.py  plot_accept_idx_opposite.py  plot_cells_dependence.py  plot_convergence.py  plot_dependence.py  plot_fitness_center.py  plot_fitness_opposite.py
experiments/graphing_functions_with_experimental_data/data/: cells_iter_dependence.csv  dependence.csv
experiments/graphing_functions_with_experimental_data/data/forest_15/: merging1.csv  merging2.csv  merging3.csv  merging4.csv  merging5.csv  merging6.csv  merging7.csv
experiments/graphing_functions_with_experimental_data/data/forest_30/: merging1.csv  merging2.csv
experiments/graphing_functions_with_experimental_data/data/forest_5/: README.md  merging1.csv  merging2.csv  merging3.csv  merging5.csv  merging6.csv  merging7.csv
experiments/graphing_functions_with_experimental_data/data/maze_opposite_45/: merging1.csv  merging2.csv  merging3.csv  merging4.csv  merging5.csv  merging6.csv  merging7.csv
experiments/graphing_functions_with_experimental_data/data/maze_zero_10/: merging1.csv  merging2.csv  merging3.csv  merging4.csv  merging5.csv  merging6.csv  merging7.csv
experiments/graphing_functions_with_experimental_data/data/maze_zero_100/: merging1.csv  merging2.csv  merging3.csv  merging4.csv  merging5.csv  merging6.csv  merging7.csv
experiments/graphing_functions_with_experimental_data/data/maze_zero_30/: merging1.csv  merging2.csv  merging3.csv  merging4.csv  merging5.csv  merging6.csv  merging7.csv
experiments/graphing_functions_with_experimental_data/data/maze_zero_convergence/: attempt1.csv  attempt2.csv
experiments/graphing_functions_with_experimental_data/utils/: README.md  mean_map_entropy.py  orienteering_utils.py
experiments/maze/one_drone_maze/: session.yml
experiments/maze/one_drone_maze/positions/: pos1.txt  pos1_2.txt  pos2.txt
experiments/maze/test_maze_bagfiles/: .tmuxinator.yml  play_rosbag_on_uav.sh
experiments/maze/test_maze_bagfiles_whole_map/: play_rosbag_on_uav.sh  session.yml
experiments/maze/two_drones_maze/: .tmuxinator.yml  session.yml
experiments/real_world/: record.sh
experiments/real_world/one_drone_uvdar_bag/: .tmuxinator.yml  session.yml  world.yaml
experiments/real_world/one_drone_uvdar_bag/positions/: pos0.txt  pos2.txt
experiments/real_world/test_camp_bagfiles/: play_rosbag_on_uav_merg.sh  play_rosbag_on_uav_rec.sh  session.yml
experiments/real_world/test_camp_uvdar_data/: .tmuxinator.yml  session.yml
experiments/worlds/: Two_clusters  gazebo_world_maze_for_two.world
experiments/worlds/gazebo_world_creator/: .tmuxinator.yml  world.yaml
experiments/worlds/walls1/: model.config  model.sdf
occupancy_grid_merger/: CMakeLists.txt  LICENSE  README.md  package.xml  plugins.xml
occupancy_grid_merger/config/: default.yaml  dynparam.cfg
occupancy_grid_merger/include/: Evolution.h  Generation.h  Individual.h  Merger2d.h  OccupancyGridMerger.h  Population.h  transformations.h  types.h  verification.h
occupancy_grid_merger/launch/: simulation.launch  throttle.launch  uav.launch  uvdar_rosbag.launch
occupancy_grid_merger/src/: Evolution.cpp  Generation.cpp  Individual.cpp  Merger2d.cpp  OccupancyGridMerger.cpp  Population.cpp  transformations.cpp  verification.cpp
relative_pose_estimator/: CMakeLists.txt  README.md  package.xml  plugins.xml  rosdoc.yaml
relative_pose_estimator/config/: default.yaml  simulation.yaml
relative_pose_estimator/include/: RelativePoseEstimator.h  transformations.h
relative_pose_estimator/launch/: simulation.launch  throttle.launch
relative_pose_estimator/src/: RelativePoseEstimator.cpp  transformations.cpp
