<?xml version="1.0"?>
<package format="2">

  <name>relative_pose_estimator</name>
  <version>0.0.1</version>
  <description>relative_pose_etimator</description>

  <maintainer email="janmadera97@gmail.com">Jan Madera</maintainer>
  <author email="maderja1@fel.cvut.cz">Jan Madera</author>

  <license>BDS3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>mrs_lib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
